manifests/simple-metrics-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-app
  namespace: default
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: metrics-app
  template:
    metadata:
      labels:
        app: metrics-app
    spec:
      containers:
      - name: metrics-app
        image: ghcr.io/hoaqim/self-service-platform/simple-metrics-go:latest
        ports: 
        - containerPort: 8080
