manifests/simple-metrics-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: default
spec:
  selector:
    app: metrics-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
