manifests/simple-metrics-go/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: metrics-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: ingress-nginx
    ports: 
    - protocol: TCP
      port: 8080
